further maven plugin updates revamped condition compiler new condition compiler configuration option